--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## Default Go gitignore
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,6 +14,13 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+##
 
+# Torrents
 *.torrent
+
+# VS Code launch config
 launch.json
+
+# Logs, etc
+*.txt
